--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,17 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directory
-node_modules
-
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# Dependency directories
+node_modules
+bower_components
+typings
+
+# Post-build files
+app/dist
+app/bundle.js
