--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
   "homepage": "https://github.com/SMartinScottLogic/queue-manager#readme",
   "dependencies": {
     "babel-runtime": "^6.9.2",
+    "body-parser": "^1.15.1",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
     "react": "^15.1.0",
-    "react-markup" : "^1.0.3",
-    "react-hyperscript": "^2.4.0"
+    "react-hyperscript": "^2.4.0",
+    "react-markup": "^1.0.3",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
