--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^15.1.0",
     "react-hyperscript": "^2.4.0",
     "react-markup": "^1.0.3",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
