--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^15.1.0",
     "react-hyperscript": "^2.4.0",
     "react-markup": "^1.0.3",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2"
   },
