--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/main.js",
     "prebuild": "npm install",
     "build": "echo \"Error: build not configured\" && exit 1",
     "server": "node server/main.js",
@@ -34,6 +35,7 @@
     "express": "^4.13.4",
     "immutable": "^3.8.1",
     "react": "^15.1.0",
+    "react-hammerjs": "^0.4.6",
     "react-hyperscript": "^2.4.0",
     "react-markup": "^1.0.3",
     "react-redux": "^4.4.5",
