--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^2.11.1",
     "express": "^4.13.4",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.1.0",
     "react-hammerjs": "^0.4.6",
     "react-hyperscript": "^2.4.0",
