--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-markup": "^1.0.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.0",
