Skip old 'app' folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "noImplicitUseStrict": true
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "app"
     ]
 }
